--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -3,6 +3,9 @@ title: "Data622 - Group2 - Homework4"
 author: "Zachary Palmore, Kevin Potter, Amit Kapoor, Adam Gersowitz, Paul Perez"
 date: "10/21/2021"
 output:
+  html_document:
+    toc: yes
+    df_print: paged
   pdf_document:
     latex_engine: xelatex
     toc: yes
